# skyulf_mlflow_library

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-gh-pages.yml  workflow-pypl.yml
docs/: CONTRIBUTING.md  PYPI_PUBLISHING.md
docs/api/: FEATURE_SELECTION_METHODS.md  data_ingestion.md  domain_analysis.md  eda.md  feature_engineering.md  model_registry.md  model_training.md  preprocessing.md
examples/: 01_basic_usage.py  02_comprehensive_pipeline.py  03_data_consistency.py  04_feature_math.py  05_smart_binning.py  06_metrics_calculator.py  07_complete_pipeline.py  08_model_training.py  09_feature_selection.py  10_full_library_showcase.py  11_domain_analyzer.py  12_eda_overview.py  production_pipeline_with_registry.py
examples/data/: wine_dataset.csv  wine_metrics.csv
examples/model_registry/: registry.db
scripts/: set_github_about.ps1
skyulf_mlflow_library/: __init__.py  exceptions.py
skyulf_mlflow_library/core/: __init__.py  base.py  exceptions.py  types.py
skyulf_mlflow_library/data_ingestion/: __init__.py  loaders.py
skyulf_mlflow_library/eda/: __init__.py  domain.py  quality.py  text.py
skyulf_mlflow_library/features/: __init__.py
skyulf_mlflow_library/modeling/: __init__.py  classifiers.py  metrics.py  registry.py  regressors.py
tests/: __init__.py  conftest.py  test_eda_domain.py  test_eda_quality.py  test_eda_text.py  test_end_to_end.py  test_preprocessing.py  test_utils.py
(+36 files in other folders)
