[project]
name = "skyulf-mlflow"
version = "0.1.1"
description = "Lightweight ML preprocessing, feature engineering and model registry library built for production-friendly pipelines."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Murat Unsal", email = "murath.unsal@unsal.com" } ]
keywords = ["ml", "mlflow", "feature-engineering", "data-quality", "pipeline", "preprocessing", "model-registry", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/flyingriverhorse/skyulf_mlflow_library"
Repository = "https://github.com/flyingriverhorse/skyulf_mlflow_library"
Changelog = "https://github.com/flyingriverhorse/skyulf_mlflow_library/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
